Fixed the timeout and generation issues.

--- a/com.rockwellcollins.spear.ui/plugin.xml
+++ b/com.rockwellcollins.spear.ui/plugin.xml
@@ -556,7 +556,6 @@
             id="com.rockwellcollins.spear.ui"
             name="SpeAR View">
       </category>
-      
         <view
               category="com.rockwellcollins.spear.ui"
               class="com.rockwellcollins.spear.ui.views.SpearEntailmentResultsView"
@@ -575,7 +574,7 @@
               icon="icons/realizability.png"
               id="com.rockwellcollins.spear.ui.views.SpearRealizabilityResultsView"
               name="Realizability Analysis Results"/>              
-    <view
+        <view
               category="com.rockwellcollins.spear.ui.lustre"
               class="com.rockwellcollins.spear.ui.views.SpearCounterexampleView"
               icon="icons/counterexample.png"
@@ -615,41 +614,41 @@
          point="org.eclipse.ui.commands">
       <category
             name="SpeAR Commands"
-            id="com.rockwellcollins.spear.translate.commands">
+            id="com.rockwellcollins.spear.ui.commands">
       </category>
-     <command categoryId="com.rockwellcollins.spear.translate.commands"
+     <command categoryId="com.rockwellcollins.spear.ui.commands"
            description="Translate a Pattern to Lustre and Analyze"
-           id="com.rockwellcollins.spear.translate.commands.analyzePattern"
+           id="com.rockwellcollins.spear.ui.commands.analyzePattern"
            name="Analyze SpeAR Pattern">
      </command>
-     <command categoryId="com.rockwellcollins.spear.translate.commands"
+     <command categoryId="com.rockwellcollins.spear.ui.commands"
            description="Simulate a Pattern in Excel"
-           id="com.rockwellcollins.spear.translate.commands.simulatePattern"
+           id="com.rockwellcollins.spear.ui.commands.simulatePattern"
            name="Simulate SpeAR Pattern">
      </command>        
-     <command categoryId="com.rockwellcollins.spear.translate.commands"
+     <command categoryId="com.rockwellcollins.spear.ui.commands"
            description="Analyze Type"
-           id="com.rockwellcollins.spear.translate.commands.analyzeType"
+           id="com.rockwellcollins.spear.ui.commands.analyzeType"
            name="Check Type Validity">
      </command>
-     <command categoryId="com.rockwellcollins.spear.translate.commands"
+     <command categoryId="com.rockwellcollins.spear.ui.commands"
            description="Normalize Section Headers"
-           id="com.rockwellcollins.spear.translate.commands.normalizeSectionHeaders"
+           id="com.rockwellcollins.spear.ui.commands.normalizeSectionHeaders"
            name="Normalize Section Headers">
      </command>
-     <command categoryId="com.rockwellcollins.spear.translate.commands"
+     <command categoryId="com.rockwellcollins.spear.ui.commands"
            description="Terminate Analysis"
-           id="com.rockwellcollins.spear.translate.commands.terminateLogicalEntailment"
+           id="com.rockwellcollins.spear.ui.commands.terminateLogicalEntailment"
            name="Cancel Analysis">
      </command>   
-     <command categoryId="com.rockwellcollins.spear.translate.commands"
+     <command categoryId="com.rockwellcollins.spear.ui.commands"
            description="Terminate Analysis"
-           id="com.rockwellcollins.spear.translate.commands.terminateLogicalConsistency"
+           id="com.rockwellcollins.spear.ui.commands.terminateLogicalConsistency"
            name="Cancel Analysis">
      </command>   
-     <command categoryId="com.rockwellcollins.spear.translate.commands"
+     <command categoryId="com.rockwellcollins.spear.ui.commands"
            description="Terminate Analysis"
-           id="com.rockwellcollins.spear.translate.commands.terminateRealizability"
+           id="com.rockwellcollins.spear.ui.commands.terminateRealizability"
            name="Cancel Analysis">
      </command>   
 
@@ -662,35 +661,35 @@
             locationURI="popup:#TextEditorContext?after=additions">
           <separator name="spear-seperator" visible="true"> </separator>
           <command
-                commandId="com.rockwellcollins.spear.translate.commands.analyzePattern"
+                commandId="com.rockwellcollins.spear.ui.commands.analyzePattern"
                 icon="icons/logical_entailment.png"
-                id="com.rockwellcollins.spear.translate.commands.analyzePattern"
+                id="com.rockwellcollins.spear.ui.commands.analyzePattern"
                 style="push">
           </command>
           <command
-                commandId="com.rockwellcollins.spear.translate.commands.simulatePattern"
+                commandId="com.rockwellcollins.spear.ui.commands.simulatePattern"
                 icon="icons/spreadsheet.png"
-                id="com.rockwellcollins.spear.translate.commands.simulatePattern"
+                id="com.rockwellcollins.spear.ui.commands.simulatePattern"
                 style="push">
           </command>          
           <command
-                commandId="com.rockwellcollins.spear.translate.commands.analyzeType"
+                commandId="com.rockwellcollins.spear.ui.commands.analyzeType"
                 icon="icons/fire.png"
-                id="com.rockwellcollins.spear.translate.commands.analyzeType"
+                id="com.rockwellcollins.spear.ui.commands.analyzeType"
                 style="push">
           </command>
           <command
-                commandId="com.rockwellcollins.spear.translate.commands.normalizeSectionHeaders"
+                commandId="com.rockwellcollins.spear.ui.commands.normalizeSectionHeaders"
                 icon="icons/spear_icon.png"
-                id="com.rockwellcollins.spear.translate.commands.normalizeSectionHeaders"
+                id="com.rockwellcollins.spear.ui.commands.normalizeSectionHeaders"
                 style="push">
           </command>          
       </menuContribution> 
       <menuContribution
             allPopups="false"
-            locationURI="toolbar:com.rockwellcollins.spear.translate.views.SpearEntailmentResultsView">
+            locationURI="toolbar:com.rockwellcollins.spear.ui.views.SpearEntailmentResultsView">
          <command
-               commandId="com.rockwellcollins.spear.translate.commands.terminateLogicalEntailment"
+               commandId="com.rockwellcollins.spear.ui.commands.terminateLogicalEntailment"
                icon="icons/terminate.png"
                label="Terminate"
                style="push">
@@ -698,17 +697,17 @@
       </menuContribution>
       <menuContribution
             allPopups="false"
-            locationURI="toolbar:com.rockwellcollins.spear.translate.views.SpearConsistencyResultsView">
+            locationURI="toolbar:com.rockwellcollins.spear.ui.views.SpearConsistencyResultsView">
          <command
-               commandId="com.rockwellcollins.spear.translate.commands.terminateLogicalConsistency"
+               commandId="com.rockwellcollins.spear.ui.commands.terminateLogicalConsistency"
                icon="icons/terminate.png"
                label="Terminate"
                style="push">
          </command>
       </menuContribution>
-            <menuContribution
-            allPopups="false"
-            locationURI="toolbar:com.rockwellcollins.spear.ui.views.BatchAnalysisView">
+      <menuContribution
+         allPopups="false"
+         locationURI="toolbar:com.rockwellcollins.spear.ui.views.BatchAnalysisView">
          <command
                commandId="com.rockwellcollins.spear.ui.commands.terminateBatchAnalysis"
                icon="icons/terminate.png"
@@ -730,19 +729,19 @@
    <extension
          point="org.eclipse.ui.handlers">
       <handler
-            commandId="com.rockwellcollins.spear.translate.commands.analyzePattern"
+            commandId="com.rockwellcollins.spear.ui.commands.analyzePattern"
             class="com.rockwellcollins.spear.ui.handlers.AnalyzePattern">
       </handler>
       <handler
-            commandId="com.rockwellcollins.spear.translate.commands.simulatePattern"
+            commandId="com.rockwellcollins.spear.ui.commands.simulatePattern"
             class="com.rockwellcollins.spear.ui.handlers.SimulatePattern">
       </handler>      
       <handler
-            commandId="com.rockwellcollins.spear.translate.commands.analyzeType"
+            commandId="com.rockwellcollins.spear.ui.commands.analyzeType"
             class="com.rockwellcollins.spear.ui.handlers.AnalyzeType">
       </handler>
       <handler
-            commandId="com.rockwellcollins.spear.translate.commands.normalizeSectionHeaders"
+            commandId="com.rockwellcollins.spear.ui.commands.normalizeSectionHeaders"
             class="com.rockwellcollins.spear.ui.handlers.NormalizeSectionHeaders">
       </handler>
       <handler
@@ -753,6 +752,23 @@
             commandId="com.rockwellcollins.spear.ui.commands.terminateBatchAnalysis"
             class="com.rockwellcollins.spear.ui.handlers.BatchAnalysis">
       </handler>
+       <handler
+            commandId="com.rockwellcollins.spear.ui.commands.terminateLogicalConsistency"
+            class="com.rockwellcollins.spear.ui.handlers.TerminateHandler">
+      </handler>
+       <handler
+            commandId="com.rockwellcollins.spear.ui.commands.terminateLogicalEntailment"
+            class="com.rockwellcollins.spear.ui.handlers.TerminateHandler">
+      </handler>
+             <handler
+            commandId="com.rockwellcollins.spear.ui.commands.terminateLogicalConsistency"
+            class="com.rockwellcollins.spear.ui.handlers.TerminateHandler">
+      </handler>
+       <handler
+            commandId="com.rockwellcollins.spear.ui.commands.terminateRealizability"
+            class="com.rockwellcollins.spear.ui.handlers.TerminateHandler">
+      </handler>
+      
    </extension>
    
 
