--- a/com.rockwellcollins.spear/build.properties
+++ b/com.rockwellcollins.spear/build.properties
@@ -9,7 +9,9 @@ bin.includes = model/,\
                dependencies/jkind/jkind-api.jar,\
                dependencies/jkind/jkind.jar,\
                dependencies/commons/commons-collections4-4.1.jar,\
-               dependencies/commons/commons-lang3-3.4.jar
+               dependencies/commons/commons-lang3-3.4.jar,\
+               dependencies/commons/commons-io-2.5-javadoc.jar,\
+               dependencies/commons/commons-io-2.5.jar
 source.. = src/,\
            src-gen/,\
            xtend-gen/
