cleaning up the java commons lang library and upgrading to 3.6

--- a/com.rockwellcollins.spear/build.properties
+++ b/com.rockwellcollins.spear/build.properties
@@ -9,9 +9,11 @@ bin.includes = model/,\
                dependencies/jkind/jkind-api.jar,\
                dependencies/jkind/jkind.jar,\
                dependencies/commons/commons-collections4-4.1.jar,\
-               dependencies/commons/commons-lang3-3.4.jar,\
+               dependencies/commons/commons-io-2.5.jar,\
+               dependencies/commons/commons-collections4-4.1-javadoc.jar,\
                dependencies/commons/commons-io-2.5-javadoc.jar,\
-               dependencies/commons/commons-io-2.5.jar
+               dependencies/commons/commons-lang3-3.6-javadoc.jar,\
+               dependencies/commons/commons-lang3-3.6.jar
 source.. = src/,\
            src-gen/,\
            xtend-gen/
