--- a/com.rockwellcollins.spear/plugin.xml
+++ b/com.rockwellcollins.spear/plugin.xml
@@ -15,7 +15,7 @@
         point="org.eclipse.core.runtime.products">
      <product
            application="org.eclipse.ui.ide.workbench"
-           name="spear">
+           name="Spear">
         <property
               name="windowImages"
               value="branding/1429142139_weapons_spear-16.png,branding/1429142164_weapons_spear-32.png,branding/1429142171_weapons_spear-48.png,branding/1429142171_weapons_spear-48.png,branding/1429142344_weapons_spear-128.png,branding/1429142348_weapons_spear-256.png">
@@ -30,7 +30,7 @@
         </property>
         <property
               name="appName"
-              value="spear">
+              value="Spear">
         </property>
      </product>
   </extension>
