--- a/com.rockwellcollins.spear/plugin.xml
+++ b/com.rockwellcollins.spear/plugin.xml
@@ -22,23 +22,11 @@
         </property>
         <property
               name="aboutText"
-              value="SpeAR - Specification and Analysis of Requirements&#x0A;&#x0A;A tool for prototyping requirements using formal notations.">
+              value="SpeAR - Specification and Analysis of Requirements">
         </property>
         <property
               name="aboutImage"
               value="branding/1429142344_weapons_spear-128.png">
-        </property>
-        <property
-              name="startupForegroundColor"
-              value="FFFFFF">
-        </property>
-        <property
-              name="startupProgressRect"
-              value="2,290,448,10">
-        </property>
-        <property
-              name="startupMessageRect"
-              value="7,265,320,20">
         </property>
         <property
               name="appName"
