--- a/com.rockwellcollins.spear.translate/build.properties
+++ b/com.rockwellcollins.spear.translate/build.properties
@@ -7,7 +7,5 @@ bin.includes = plugin.xml,\
                *.xml,\
                icons/,\
                bin/,\
-               dependencies/itext/itextpdf-5.5.8.jar,\
-               dependencies/itext/itextpdf-5.5.8-javadoc.jar,\
-               dependencies/itext/itextpdf-5.5.8-sources.jar,\
-               dependencies/javatuples-1.2.jar
+               dependencies/javatuples-1.2.jar,\
+               dependencies/jxl.jar
