--- a/com.rockwellcollins.spear/build.properties
+++ b/com.rockwellcollins.spear/build.properties
@@ -4,12 +4,8 @@ bin.includes = model/,\
                plugin.xml,\
                plugin_customization.ini,\
                branding/,\
-               dependencies/,\
                icons/,\
-               dependencies/jkind/jkind-api.jar,\
-               dependencies/jkind/jkind.jar,\
-               dependencies/commons/commons-io-2.5-javadoc.jar,\
-               dependencies/commons/commons-io-2.5.jar
+               dependencies/
 source.. = src/,\
            src-gen/,\
            xtend-gen/
