Added feature group and Eclipse update site projects (based upon Xtext wizard)

--- a/com.rockwellcollins.spear.parent/pom.xml
+++ b/com.rockwellcollins.spear.parent/pom.xml
@@ -25,6 +25,8 @@
 		<module>com.rockwellcollins.spear.translate</module>
 		<module>com.rockwellcollins.spear.ui</module>
 		<module>com.rockwellcollins.spear.target</module>
+		<module>com.rockwellcollins.spear.feature</module>
+		<module>com.rockwellcollins.spear.repository</module>
 		<module>com.rockwellcollins.spear.ui.commandline</module>
 		<module>com.rockwellcollins.spear.tests</module>
 		<module>com.rockwellcollins.spear.ui.tests</module>
@@ -47,6 +49,47 @@
 				<artifactId>tycho-maven-plugin</artifactId>
 				<version>${tycho-version}</version>
 				<extensions>true</extensions>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-source-plugin</artifactId>
+				<version>${tycho-version}</version>
+				<executions>
+					<execution>
+						<id>plugin-source</id>
+						<goals>
+							<goal>plugin-source</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho.extras</groupId>
+				<artifactId>tycho-source-feature-plugin</artifactId>
+				<version>${tycho-version}</version>
+				<executions>
+					<execution>
+						<id>source-feature</id>
+						<phase>package</phase>
+						<goals>
+							<goal>source-feature</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-p2-plugin</artifactId>
+				<version>${tycho-version}</version>
+				<executions>
+					<execution>
+						<id>attach-p2-metadata</id>
+						<phase>package</phase>
+						<goals>
+							<goal>p2-metadata</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
