--- a/com.rockwellcollins.spear.parent/com.rockwellcollins.spear.ui.commandline/.classpath
+++ b/com.rockwellcollins.spear.parent/com.rockwellcollins.spear.ui.commandline/.classpath
@@ -11,5 +11,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="/com.collins.trustedsystems.jkindapi"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
